Added default problog execuable functionality (using installed python)